syntax = "proto3";
package slack;

message PostMessageRequest {
  string channel = 1;
  string message = 2;
}

message PostMessageResponse { }

service SlackAdaptor {
  rpc PostMessage(PostMessageRequest) returns (PostMessageResponse);
}
